--- a/projects/big/css/stockit.css
+++ b/projects/big/css/stockit.css
@@ -1,16 +1,47 @@
-body{
-   background-color: #222222;
+@import "@material/button/mdc-button";
+
+:root {
+    --mdc-theme-primary: white;
+    --mdc-theme-text-primary-on-primary: #6C0000;
+    
 }
 
+#alert{
+    top: -100%;
+    font-size:10px;
+    color:red;
+    transform: translate(0%, -200%);
+}
+
+body{
+   background-color: #222222;
+   overflow: hidden;
+   color:white!important;
+}
 #about{
     position: absolute;
-    text-align: center;
+    text-align: left;
     color: white;
     position: fixed; 
     top: -50%; 
     left: -50%; 
     width: 200%; 
     height: 200%;
+}
+
+
+#login{
+    font-family: "Orbitron";
+    font-size:30px;
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    var(--mdc-theme-secondary, #ffffff);
+}
+
+#mdc-floating-label-color{
+    color:white;
 }
 
 #about img{
@@ -28,6 +59,20 @@ body{
     color:#6C0000;
 }
 
+
+.login-field{
+    font-family: "Orbitron";
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.login-field hr{
+    clear: both;
+    visibility: hidden;
+}
+
 .home-title{
     font-family: "Orbitron";
     font-size:80px;
@@ -42,6 +87,7 @@ body{
     font-size:16px;
 }
 
+    
 .home-title-it{
     color:#6C0000;
 }
@@ -54,13 +100,67 @@ body{
     background-color:#000000 !important;
 }
 
+.loginbtn{
+    position: absolute;
+    font-size: 20px;
+    top: 74%;
+    left: 50%;
+    transform: translate(-50%, 100%);
+    background-color:#222222 !important;
+}
+
 .period{
     color:#6C0000;
     font-size:40px;
     font-weight: bold;
 }
 
+.stockit-navbar{
+    background-color:black;
+    width:90%;
+    /*position: absolute; */
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    margin: auto; 
+}
+
+.sign-field{
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    font-size:10px;
+    transform: translate(-50%, 200%);
+}
+
+.signupbtn{
+    color: red;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.signupbtn:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 .underlined{
     text-decoration: underline;
     text-decoration-color: #6C0000;
+}
+
+.login-screen{
+    color:white!important;
+    font-family: "Orbitron";
+    font-size:20px;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media (max-width: 600px) {
+  #about img{
+    width: 100%;
+  }
 }
