--- a/projects/big/css/stockit.css
+++ b/projects/big/css/stockit.css
@@ -2,6 +2,7 @@
 
 :root {
     --mdc-theme-primary: white;
+    --mdc-theme-secondary: black;
     --mdc-theme-text-primary-on-primary: #6C0000;
     
 }
@@ -37,7 +38,6 @@ body{
     top: 75%;
     left: 50%;
     transform: translate(-50%, 50%);
-    var(--mdc-theme-secondary, #ffffff);
 }
 
 #mdc-floating-label-color{
@@ -59,6 +59,44 @@ body{
     color:#6C0000;
 }
 
+#search{
+    background-color:black;
+    color:white;
+    width:90%;
+    /*position: absolute; */
+    top: 0; 
+    left: 0; 
+    right: 0; 
+    bottom: 0; 
+    margin: auto; 
+}
+
+#searchbtn{
+    position: relative; 
+    color: #6C0000;
+    top:5%;
+    right:5%;
+}
+
+#searchbtn:hover {
+  cursor: pointer;
+}
+
+#stock{
+    /*background-color:black;*/
+    color:white;
+    width:90%;
+    margin: auto;
+}
+
+#chart{
+    position: relative;
+    top:100px;
+    margin:auto;
+    width:100%;
+    height:100%;
+}
+
 
 .login-field{
     font-family: "Orbitron";
@@ -66,6 +104,15 @@ body{
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+.searchtitle{
+    font-family: "Orbitron";
+    font-size:30px;
+    position: relative; 
+    color: #6C0000;
+    top:5%;
+    left:5%;
 }
 
 .login-field hr{
